--- a/.gitignore
+++ b/.gitignore
@@ -12,17 +12,17 @@ dist-bin
 **/obj
 **/.vscode
 **/*.sublime-workspace
+**/*.sublime-project
 **/bin/
 **/build/
 **/Makefile
 forge/generated/*
-!projects/gmake/Makefile
-!projects/gmake/mn.make
-!projects/gmake/unittest.make
-!projects/vs2017/mn.sln
-!projects/vs2017/mn.vcxproj
-!projects/vs2017/mn.vcxproj.filters
-!projects/vs2017/unittest.vcxproj
+!projects
+!projects/**/*.vcxproj
+!projects/**/*.vcxproj.filters
+!projects/**/Makefile
+compile_commands.json
+**/Exports.h
 
 # User-specific files
 *.suo
